@@ -91,9 +91,9 @@
                             <version>${lombok.version}</version>
                         </annotationProcessorPath>
                     </annotationProcessorPaths>
-                    <!--<compilerArgs>-->
-                    <!--<arg>&#45;&#45;enable-preview</arg>-->
-                    <!--</compilerArgs>-->
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -103,7 +103,7 @@
                 <configuration>
                     <!--suppress UnresolvedMavenProperty -->
                     <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
-                    <!--<argLine>&#45;&#45;enable-preview</argLine>-->
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -117,7 +117,7 @@
                     <stripDebug>true</stripDebug>
                     <compress>zip-1</compress>
                     <addOptions>-Drequest_sink.version=${project.version}</addOptions>
-                    <!--<addOptions>&#45;&#45;enable-preview</addOptions>-->
+                    <addOptions>--enable-preview</addOptions>
                 </configuration>
             </plugin>
             <plugin>
